--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <p class="humidity"></p>
                 <p class="wind"></p>
                 <p class="uvindex"></p>
+                <p class="lat"></p>
+                <p class="lon"></p>
 
          <!-- <div id="currentCity"></div> -->
             </div>
